force-app/main/default/objects/Discount__c/fields/Discount_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Discount_Requirement__c</fullName>
    <label>Discount Requirement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BooksSoldDiscountRequirements</fullName>
                <label>More than &lt;Requirement_Value&gt;  books bought</label>
            </value>
            <value>
                <fullName>OrdersPlacedDisountRequirements</fullName>
                <label>More than &lt;Requirement_Value&gt; orders placed</label>
            </value>
            <value>
                <fullName>MoneySpentDiscountRequirements</fullName>
                <label>More &lt;Requirement_Value&gt; PLN spent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>