force-app/main/default/objects/Discount__c/fields/Discount_Requirement_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Requirement_Value__c</fullName>
    <label>Discount Requirement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>