force-app/main/default/objects/Discount__c/fields/DiscountValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountValue__c</fullName>
    <label>Discount Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>